* fix project overview theming * fix project report theming